Added product type logic, API endpoints for treatments products
